# tflm-hotword-recognition

./: CMakeLists.txt
lib/: generate-tensorflow-lite-micro-library.txt
src/: audio_provider.cpp  config.h  main_functions.cpp
